[workspace]

members = [
  "filecoin-proofs",
  "storage-proofs-core",
  "storage-proofs-porep",
  "storage-proofs-post",
  "fil-proofs-tooling",
  "fil-proofs-param",
  "fr32",
  "sha2raw",
  "filecoin-hashers",
]

[patch.crates-io]
paired = { git = "https://github.com/filecoin-project/paired", branch = "ser-de" }
fff = { git = "https://github.com/filecoin-project/ff", branch = "ser-de" }
groupy = { git = "https://github.com/filecoin-project/group", branch = "ser-de" }
blstrs = { git = "https://github.com/filecoin-project/blstrs", branch = "ser-de" }
#bellperson = { git = "https://github.com/filecoin-project/bellperson", branch = "feat-aggregation", default-features = false }
bellperson = { git = "https://github.com/cryptonemo/bellman", branch = "feat-aggregation", default-features = false }
