[package]
name = "fr32"
version = "0.1.0"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
description = "Filecoin proofs Fr/32-byte conversion tooling"
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/filecoin-project/rust-fil-proofs"

[dependencies]
anyhow = "1.0.23"
bellperson = { version = "0.12.3", default-features = false }
byteorder = "1"
ff = { version = "0.2.3", package = "fff" }
thiserror = "1.0.6"

[dev-dependencies]
criterion = "0.3"
rand = "0.7"

[features]
default = ["pairing"]
pairing = ["bellperson/pairing"]
blst = ["bellperson/blst"]

[[bench]]
name = "fr"
harness = false
